# Quantcept

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  SECURITY.md  biome.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: README.md
examples/: basic-usage.md  configuration.md
homebrew/: README.md  quantcept.rb
script/: build-computeruse.ts  build-learnings.ts  build.ts  postinstall.mjs
script/fixtures/: biased-strategy.py
scripts/: install.ps1  install.sh
sidecar/computeruse/: Cargo.toml  README.md
sidecar/computeruse/src/: main.rs  marks.rs
src/: llm.ts
src/cli/: index.ts  jobs-command.ts  plugin-command.ts  verify-command.ts
src/core/agent/: agent-load.ts  agent-manifest.ts  agents.ts  compose-system.ts  events.ts  loop.ts  openaiComputerUse.ts  registry.ts  system.ts  task-tool.ts
src/core/broker/: index.ts  order-tools.ts  paper.ts  types.ts
src/core/budget/: governor.ts  index.ts  pricing.ts  (+1 more)
src/shared/: branding.ts  errors.ts  format.ts  frontmatter.ts  fsperm.ts  logger.ts  open-browser.ts  paths.ts  time.ts  version.ts
src/tui/: app.tsx  keymap.tsx  tips.ts
test/cli/: jobs-approvals.test.ts  jobs-budget.test.ts  jobs-tick.test.ts  verify-command.test.ts
test/shared/: errors.test.ts  format.test.ts  frontmatter.test.ts  fsperm.test.ts  logger.test.ts  paths.test.ts  time.test.ts
test/tui/: auto-approve.test.ts  tips.test.ts
winget/: FinceptCorporation.Quantcept.yaml  README.md
(+559 files in other folders)
