[package]
name = "quantcept-computeruse"
version = "0.1.0"
edition = "2021"
description = "Capture + input sidecar for Quantcept computer-use (xcap + enigo over JSON-RPC stdio)"
publish = false

[[bin]]
name = "quantcept-computeruse"
path = "src/main.rs"

[dependencies]
xcap = "0.9"
enigo = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = "0.26.2"
ab_glyph = "0.2.32"

[target.'cfg(windows)'.dependencies]
uiautomation = "0.25.0"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
